2001-12-03  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/barge.cc (Barge_object): Start motion with 1 tile for
	better control.
	* usecode/ucinternal.cc (public): Get_barge() checks to see that
	obj. is within the barge's footprint.  Also finds highest
	qualifying barge beneath obj.

2001-12-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: don't allow Npc_actor::remove_this to delete the NPC
	* contain.cc, objs.cc: catch possible (but unlikely) divisions by zero
	* files/crc.*, Makefile.*: CRC-32 algo
	* tools/expack.cc: compute CRC of resulting .flx file
	* exult.cc: check CRC of exult*.flx files
	* Spellbook_gump.cc: fixed reagents of BG 1st circle
	* ucinternal.cc: fixed Dagger Isle cyclops conversation
	* gamewin.cc: fixed crash when find_objects finds too many objects
	* debian/*: new debian files from Michael Z.
	* bggame.cc, sigame.cc: check for exult_bg/si.flx in is_installed()
	* schedule.cc: fix dancing Naga (missing frames)
	* barge.cc, animate.cc, actors.cc, contain.cc: call inherited functions
	of direct parent, not Game_object
	
2001-12-03  Ryan Nunn <triforce@merlin.net.au>
	* objs/animate.cc : Fixed Minoc millsaw animation. Requires new game to
	  work 100% properly.

2001-12-03  Ryan Nunn <triforce@merlin.net.au>
	* msvcstuff/exconfig/exconfig.cpp : Updated installer stuff
	* msvcstuff/exconfig/exconfig.rc, win32/exultico.rc : 0.97cvs

2001-12-03  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in, Makefile.win32, Makefile.cygwin, Makefile.be,
	  msvcstuff/Exult.dsp, msvcstuff/msvc_kludges.h, mac/mac_autoconfig.h:
	  bumped version to 0.97cvs
	* data/videooptions.shp: shrunk video options dialog
	* gumps/VideoOptions_gump.cc: removed RGB placeholders
	* exult.cc: display version info on stdout by default
	* NEWS: started new entry
	* TODO.xml: updated

2001-12-03  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt: Added support for 'call' opcode.
