@@ -1,3 +1,9 @@
+2001-12-04  Ryan Nunn <triforce@merlin.net.au>
+	* files/crc.cc : Now actually works because it now actually reads files
+	  as binary. Also did std namespace, and some casting.
+	* msvcstuff/Exult.dsp, msvcstuff/expack.dsp, msvcstuff/msvc_kludges.h :
+	  Added crc.cc/h where required
+
 2001-12-03  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* objs/barge.cc (Barge_object): Start motion with 1 tile for
